reuse-mlir/test/integration/basic/invalid_release_token.mlir
// RUN: %not %reuse-opt %s 2>&1 | %FileCheck %s
module @test attributes {dlti.dl_spec = #dlti.dl_spec<#dlti.dl_entry<f80, dense<128> : vector<2xi64>>, #dlti.dl_entry<i128, dense<128> : vector<2xi64>>, #dlti.dl_entry<i32, dense<32> : vector<2xi64>>, #dlti.dl_entry<f128, dense<128> : vector<2xi64>>, #dlti.dl_entry<f64, dense<64> : vector<2xi64>>, #dlti.dl_entry<f16, dense<16> : vector<2xi64>>, #dlti.dl_entry<i1, dense<8> : vector<2xi64>>, #dlti.dl_entry<!llvm.ptr, dense<64> : vector<4xi64>>, #dlti.dl_entry<!llvm.ptr<270>, dense<32> : vector<4xi64>>, #dlti.dl_entry<i8, dense<8> : vector<2xi64>>, #dlti.dl_entry<i16, dense<16> : vector<2xi64>>, #dlti.dl_entry<!llvm.ptr<272>, dense<64> : vector<4xi64>>, #dlti.dl_entry<!llvm.ptr<271>, dense<32> : vector<4xi64>>, #dlti.dl_entry<i64, dense<64> : vector<2xi64>>, #dlti.dl_entry<"dlti.stack_alignment", 128 : i64>, #dlti.dl_entry<"dlti.endianness", "little">>, llvm.data_layout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"}
{
    // CHECK: error: 'reuse_ir.rc.release' op expected to return a nullable token of size 16 and alignment 8, but found a nullable token of type '!reuse_ir.token<size : 8, alignment : 8>'
    func.func @foo(%0 : !reuse_ir.rc<i64, nonatomic, nonfreezing>) {
        %1 = reuse_ir.rc.release (%0 : !reuse_ir.rc<i64, nonatomic, nonfreezing>) : !reuse_ir.nullable<!reuse_ir.token<size: 8, alignment: 8>>
        return
    }
}
